--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,16 @@ version: '3.7'
 services:
   minecraft:
     container_name: 'minecraft-server'
-    image: openjdk:8-jre-stretch
+    build:
+      context: .
+      dockerfile: Dockerfile
     volumes:
       - '.:/usr/local/Minecraft_Server'
     working_dir: /usr/local/Minecraft_Server
     ports:
       - '25565:25565'
-    command: ['java', '-Xms1G', '-Xmx1G', '-jar', 'server.jar', 'nogui']
+      - '25575:25575'
+      - '8123:8123' # dynmap
+    # command: ['sh', 'spigot-build.sh']
+    # command: ['java', '-Xms1G', '-Xmx1G', '-jar', 'server.jar', 'nogui']
+    command: ['java', '-Xms1G', '-Xmx1G', '-jar', 'spigot-server.jar', 'nogui']
