--- a/server.properties
+++ b/server.properties
@@ -1,4 +1,5 @@
 #Minecraft server properties
+#Sat Aug 17 05:09:43 UTC 2019
 spawn-protection=16
 max-tick-time=60000
 query.port=25565
@@ -23,8 +24,10 @@ max-players=20
 network-compression-threshold=256
 resource-pack-sha1=
 max-world-size=29999984
+function-permission-level=2
 rcon.port=25575
 server-port=25565
+debug=false
 server-ip=
 spawn-npcs=true
 allow-flight=false
@@ -33,12 +36,12 @@ view-distance=10
 resource-pack=
 spawn-animals=true
 white-list=false
-rcon.password=
+rcon.password=password
 generate-structures=true
 max-build-height=256
 online-mode=true
 level-seed=
 use-native-transport=true
 prevent-proxy-connections=false
-enable-rcon=false
+enable-rcon=true
 motd=A Minecraft Server
