--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,11 +8,8 @@ services:
       dockerfile: Dockerfile
     volumes:
       - '.:/usr/local/Minecraft_Server'
-    working_dir: /usr/local/Minecraft_Server
+    # working_dir: /usr/local/Minecraft_Server
     ports:
       - '25565:25565'
       - '25575:25575'
       - '8123:8123' # dynmap
-    # command: ['sh', 'spigot-build.sh']
-    # command: ['java', '-Xms1G', '-Xmx1G', '-jar', 'server.jar', 'nogui']
-    command: ['java', '-Xms1G', '-Xmx1G', '-jar', 'spigot-server.jar', 'nogui']
