--- a/server.properties
+++ b/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Thu Oct 10 11:17:35 UTC 2019
+#Fri Dec 13 12:18:37 UTC 2019
 spawn-protection=16
 max-tick-time=60000
 query.port=25565
@@ -19,7 +19,7 @@ pvp=true
 snooper-enabled=true
 level-type=default
 hardcore=false
-enable-command-block=false
+enable-command-block=true
 max-players=20
 network-compression-threshold=256
 resource-pack-sha1=
@@ -44,4 +44,4 @@ level-seed=
 use-native-transport=true
 prevent-proxy-connections=false
 enable-rcon=true
-motd=A Minecraft Server
+motd=localhost
