--- a/server.properties
+++ b/server.properties
@@ -1,9 +1,10 @@
 #Minecraft server properties
-#Sun Dec 22 03:08:32 UTC 2019
+#Mon Jun 29 12:39:39 UTC 2020
 spawn-protection=16
 max-tick-time=60000
 query.port=25565
 generator-settings=
+sync-chunk-writes=true
 force-gamemode=false
 allow-nether=true
 enforce-whitelist=false
@@ -16,9 +17,11 @@ spawn-monsters=true
 broadcast-rcon-to-ops=true
 op-permission-level=4
 pvp=true
+entity-broadcast-range-percentage=100
 snooper-enabled=true
 level-type=default
 hardcore=false
+enable-status=true
 enable-command-block=true
 max-players=20
 network-compression-threshold=256
@@ -38,10 +41,11 @@ spawn-animals=true
 white-list=false
 rcon.password=password
 generate-structures=true
-max-build-height=256
 online-mode=true
+max-build-height=256
 level-seed=
-use-native-transport=true
 prevent-proxy-connections=false
-enable-rcon=true
+use-native-transport=true
+enable-jmx-monitoring=false
 motd=localhost
+enable-rcon=true
