--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,8 @@ services:
       dockerfile: Dockerfile
       args:
         VERSION: 1.17.1
-        BUILD: 181
+        BUILD: 398
+        MCRCON: 0.7.2
     volumes:
       - '.:/usr/local/Minecraft_Server'
     ports:
