--- a/server.properties
+++ b/server.properties
@@ -1,5 +1,3 @@
-#Fri Dec 10 04:34:09 UTC 2021
-#Minecraft server properties
 allow-flight=false
 allow-nether=true
 broadcast-console-to-ops=true
@@ -17,6 +15,7 @@ force-gamemode=false
 function-permission-level=2
 gamemode=survival
 hardcore=false
+hide-online-players=false
 level-name=world
 #level-seed=
 #level-type=default
@@ -41,6 +40,7 @@ resource-pack-sha1=
 resource-pack=
 server-ip=
 server-port=25565
+simulation-distance=10
 snooper-enabled=false
 spawn-animals=true
 spawn-monsters=true
