--- a/server.properties
+++ b/server.properties
@@ -4,7 +4,7 @@ broadcast-console-to-ops=true
 broadcast-rcon-to-ops=true
 debug=false
 difficulty=easy
-enable-command-block=false
+enable-command-block=true
 enable-jmx-monitoring=false
 enable-query=false
 enable-rcon=true
@@ -37,6 +37,7 @@ resource-pack-sha1=
 resource-pack=
 server-ip=
 server-port=25565
+simulation-distance=10
 snooper-enabled=false
 spawn-animals=true
 spawn-monsters=true
